Only substitute sourcemapped names in JavaScript code
We substitute sourcemapped identifiers by parsing entered code with
a JavaScript parser. This shouldn't be done when the debugger is used
in a C/C++ context.

Fixed: 343124456
Change-Id: Ie0d804a07079429aa2000700fa2bba9f88625777
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5578628
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -72,6 +72,7 @@ Sebastian Markbåge <sebastian@calyptus.eu>
 Serg Kryvonos <sergeikrivonos@gmail.com>
 Simon Siefke <simon.siefke@gmail.com>
 Stephen Tsoi-A-Sue <stsoiasue@gmail.com>
+Thomas Stokes <git@tombl.dev>
 Tony Kostowny <tonykostowny@gmail.com>
 Toshiaki Tanaka <zokutyou2@gmail.com>
 Tushar Singh <tusharvickey1999@gmail.com>
