[DEPS] Use vpython for gclient
to align with the DEPS of chromium which is recommends to use the
Python provided by depot_tools instead of the version installed on the
local system, which should help avoid issues like the certificate
verification failure described in the bug.

Related: 330867621

Bug: 360716744
Change-Id: Ic5b5bf5d0fa30d5e695d3792463768ab490eae98
Fixed: 360716744
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5795586
Reviewed-by: Simon Zünd <szuend@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -44,6 +44,7 @@ Jan Keitel <jan.keitel@gmail.com>
 Jeffrey Chen <jeffreyca16@gmail.com>
 Jesper van den Ende <jespertheend@gmail.com>
 Jerome Vouillon <jerome.vouillon@gmail.com>
+Jithil p Ponnan <jithil.p@gmail.com>
 Juba Borgohain <chromiumjuba@gmail.com>
 Julian Geppert <spctstr@gmail.com>
 Junseo Yoo <joon.yoo181@berkeley.edu>
