docs: fix sorting for Author's indivitual section docs: update comment of file name to devtools_compatibility.js
While getting familiar with the project, I got confused with this
file. It is just a small typo fix


Bug: none
Change-Id: I9c9f5c7b0a594d69e0d22c6d01688f634fa6fc10
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6038720
Reviewed-by: Simon Zünd <szuend@chromium.org>
Auto-Submit: Sergio Avalos <sergio.avalos@gmail.com>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -44,8 +44,8 @@ Jacky Hu <flameddd@gmail.com>
 Jake Mulhern <mulherje@gmail.com>
 Jan Keitel <jan.keitel@gmail.com>
 Jeffrey Chen <jeffreyca16@gmail.com>
-Jesper van den Ende <jespertheend@gmail.com>
 Jerome Vouillon <jerome.vouillon@gmail.com>
+Jesper van den Ende <jespertheend@gmail.com>
 Jithil p Ponnan <jithil.p@gmail.com>
 Juba Borgohain <chromiumjuba@gmail.com>
 Julian Geppert <spctstr@gmail.com>
@@ -74,6 +74,7 @@ Royi Hagigi <rhagigi@gmail.com>
 Ryan Puhalovich <reanpuhalovich@gmail.com>
 Sebastian Markbåge <sebastian@calyptus.eu>
 Serg Kryvonos <sergeikrivonos@gmail.com>
+Sergio Avalos <sergio.avalos@gmail.com>
 Simon Siefke <simon.siefke@gmail.com>
 Stephen Tsoi-A-Sue <stsoiasue@gmail.com>
 Sunnylost <sunnylost@gmail.com>
