Summary: Consistent coloring in Dark Mode
Changed the getDCLEventColor() and getLoadEventColor() methods
to have the colors of the "DOMContentLoaded" text and
"Load" text in the Log view of the network tab match the
colors of the vertical lines in the waterfall section when using
dark mode.

Bug: 378335071
Change-Id: Idfe9b2c1e959766493e6e49e7070fc12bc6dc07b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6097042
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -72,6 +72,7 @@ Rajasekar Murugan <rajasekar89be@gmail.com>
 Ross Wollman <ross.wollman@gmail.com>
 Royi Hagigi <rhagigi@gmail.com>
 Ryan Puhalovich <reanpuhalovich@gmail.com>
+Satvic Dhawan <satvicdhawan14@gmail.com>
 Sebastian Markbåge <sebastian@calyptus.eu>
 Serg Kryvonos <sergeikrivonos@gmail.com>
 Sergio Avalos <sergio.avalos@gmail.com>
