[node_app] Fix Node.js connection page icon
The node_app icon is broken.

Fixed: 390150759
Change-Id: I4fed38e2ce09d659d95c36e6787aaa0840178f8a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6175238
Reviewed-by: Yang Guo <yangguo@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -95,6 +95,7 @@ Yuan Zhuang <joann.yuanzhuang@gmail.com>
 # END individuals section.
 
 # BEGIN organizations section.
+Bloomberg Finance L.P. <*@bloomberg.net>
 Cloudflare, Inc. <*@cloudflare.com>
 Facebook, Inc. <*@fb.com>
 Google Inc. <*@google.com>
